--- a/auth.html
+++ b/auth.html
@@ -34,7 +34,7 @@
           Gerencie seus AppIDs, keys e resellers em um único lugar. Cada AppID tem suas próprias keys e regras.
         </p>
         <p>
-          Dica: o usuário com email <strong>ruanrlqcv22@gmail.com</strong> vira <strong>Admin</strong> e começa no <strong>Premium Lifetime</strong>.
+          <strong></strong><strong></strong><strong></strong>.
         </p>
       </div>
     </section>
